--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.67.0",
     "styled-components": "^5.3.11",
     "typescript": "5.2.2"
   }
