--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/react-query": "^1.2.9"
   }
 }
