--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -19,6 +20,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -26,13 +28,21 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-query": "^3.39.3",
     "sass": "^1.67.0",
     "styled-components": "^5.3.11",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
-    "@types/react-query": "^1.2.9"
+    "@testing-library/jest-dom": "6.1.2",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "^29.5.5",
+    "@types/react": "18.2.21",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "jest": "29.6.4",
+    "jest-environment-jsdom": "29.6.4",
+    "typescript": "5.2.2"
   }
 }
